<resources>
    <string name="app_name">VotingApp</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_details">details</string>
    <string name="expand_button_desc">expand button</string>
    <string name="profile_picture_desc">profile picture</string>
    <string name="profile_name">Profile Name</string>
    <string name="et_title_hint">Title</string>
    <string name="create_group_header">Create Group</string>
    <string name="group_image">Group Image</string>
    <string name="group_name">Group Name</string>
    <string name="create_question">Create Question</string>
    <string name="et_choice_hint">Choice</string>
    <string name="btn_create_question">Create</string>
    <string name="add_choice">Add Choice</string>
    <string name="add_group">Add Group</string>
    <string name="log_out">Log out</string>
    <string name="Invite">Invite</string>
    <string name="details">Details</string>
    <string name="invite_to_group">Invite To Group</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="admin_invitation_code">Admin Invitation Code</string>
    <string name="join_group">Join Group</string>
    <string name="admin">admin</string>
    <string name="invite_code">Invite Code</string>
    <string name="enter_group_invitation_code">Enter Group Invitation Code</string>
    <string name="you_have_voted">You have voted!</string>
    <string name="voted">Voted</string>
    <string name="back">back</string>
</resources>