<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_create_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_question"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ib_create_question_layout"
            app:layout_constraintStart_toStartOf="@id/ib_create_question_layout"
            app:layout_constraintTop_toBottomOf="@id/ib_create_question_layout" />

        <ImageButton
            android:id="@+id/ib_create_question_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#393838"
            android:contentDescription="@string/create_question"
            android:src="@drawable/ic_baseline_add_to_photos_24"
            app:layout_constraintBottom_toTopOf="@id/tv_create_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_create_question"
        app:layout_constraintTop_toBottomOf="@id/cl_header"
        app:layout_constraintBottom_toTopOf="@id/rv_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_title_hint"
            android:layout_margin="6dp"/>

        <ImageButton
            android:id="@+id/ib_add_answer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_add_to_photos_24"
            android:layout_gravity="end"
            android:contentDescription="@string/add_choice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_choice_layout">

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_create_question"
            android:id="@+id/btn_create_question"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_questions"
        tools:listitem="@layout/question_list_item"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_create_question"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>