<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_card_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:clickable="true"
    android:focusable="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="12dp"
            android:elevation="16dp"
            android:layout_weight="40"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cl_profile">

                <LinearLayout
                    android:id="@+id/linear_layout_question_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingTop="12dp"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/tv_profile"
                        android:src="@drawable/ic_baseline_person_24"
                        android:contentDescription="@string/profile_picture_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textStyle="bold" />



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_question_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="12dp">

                    <TextView
                        android:id="@+id/tv_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:text="Question Title"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_item_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        tools:text="date" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingVertical="12dp"
                android:id="@+id/constraint_layout">

                <RelativeLayout
                    android:id="@+id/rl_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/btn_submit"
                    android:orientation="vertical"
                    android:layout_margin="12dp"
                    android:layout_marginTop="30dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cl_voted_layout"
                        android:visibility="gone"
                        android:layout_marginTop="13dp">


                        <TextView
                            android:id="@+id/tv_voted_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/you_have_voted"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />


                        <TextView
                            android:id="@+id/tv_vote_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="0 votes" />

                        <TextView
                            android:id="@+id/tv_answer_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Voted Answer"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_voted_message"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginVertical="14dp"
                            android:textSize="20sp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_item_answers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginTop="12dp"
                        tools:itemCount="3"
                        tools:listitem="@layout/answer_list_item"
                        android:visibility="visible"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/btn_submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.153"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_recycler_view" />

                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_details"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>
